--- a/src/components/workTogetherCopy.mdx
+++ b/src/components/workTogetherCopy.mdx
@@ -9,7 +9,7 @@ Ya que tú y yo trabajaremos juntos, necesito que entiendas mi visión del mundo
 
 2. Ser uno de los mejores desarrolladores de Software en la historia de la humanidad impactando positivamente en billones de personas.
 
-3. Hacer de la plenitud fisica, la salud y la energia el estándar y no la excepción llevando el estilo de vida activo y saludable con Herbalife a millones de personas.
+3. Contribuir al desarrollo humano y económico de mi país (Venezuela), el país que me dió libertad (Chile) y mi región (Latinoamerica).
 
 ### Mis Principios de trabajo
 _Estas son las reglas fundamentales que quiero que rijan cada proyecto en que me enbarque._
@@ -23,16 +23,16 @@ _Estas son las reglas fundamentales que quiero que rijan cada proyecto en que me
 2. Cometeré errores y sé que lo cometerás eso está bien.
 	1. Lo importante e ineludible es aprender de ellos (por escrito es mejor).
 3. Las ganancias son mejores que los sueldos.
-	1. Si hago ganar a tu empresa 12millones al año al hacer una web, me parecería tramposo cobrar un salario de 500mil pesos al mes.
+	1. Si contribuyo a que tu empresa gane 60 millones de pesos al año al hacer una web, me parecería tramposo cobrar un salario de 500mil pesos al mes.
 	2. Trabajo por proyectos con fechas de entregas.
 4. Creo en la libertad de horarios, geografica, de proyectos sostenida en la responsabilidad por los resultados que entrego.
 5. Sé proactivo, empieza por el fin en mente y pon primero lo primero (en ese orden).
 	1. La agenda es uno de los recursos más importantes de mi vida.
-
+6. Nunca pares de aprender.
 
 ### ¿Cómo podríamos trabajar juntos ?
 
-Hay dos ejes en las que sostengo mi crecimiento profesional, mi impacto en el mundo, mis ingresos al mes. Estoy seguro que alguno de los dos podrían serte de MUCHA utilidad.
+Hay un eje en el que sostengo mi crecimiento profesional, mi impacto en el mundo, mis ingresos al mes. Estoy seguro que alguno de los dos podrían serte de MUCHA utilidad.
 
 #### Desarrollo de Software.
 
@@ -70,38 +70,6 @@ La mayoría de las personas percibo que se dispersan con tantas opciones de educ
 Yo elegí concentrarme en una, [Platzi](https://platzi.com/), la plataforma de educación online efectiva en la que creo.
 
 Con ellos aprenderé las tecnologias que quizá necesite aprender para mi próximo proyecto contigo.
-
-#### Herbalife Nutrition Company.
-
-> “Si queremos hacer un mundo mejor, comienza con nosotros”. — Mark Hughes
-
-¿Si sigues haciendo lo que has hecho hasta ahora en cuanto tiempo tendrás el estilo de vida que quieres?
-
-¿En cuanto tiempo tendrás unos ingresos que te permitan viajar al pais que quieras esta misma noche?
-
-Te recomiendo que te detengas a reflexionar y **respondas esa pregunta**, a mi me hizó abrirle las puertas a esta oportunidad increible.
-
-
-Además de desarrollador, soy un feliz distribuidor de esta compañia, y un comunicador de su visión tan singular.
-> Tenemos la visión de vivir en un mundo más feliz y saludable.
-
-##### Cómo puedo ayudarte en Herbalife:
-
-1. Quizás amas tu profesión, **cómo yo** , ¿Pero estás seguro que tus ingresos económicos son como te gustaria que fueran? ¿Cómo cambiaría tu vida tener 1000 dólares extra en tu bolsillo? En Herbalife hay una oportunidad de negocio increible para hacer eso posible **a tiempo parcial**. [Escribeme si te interesa](/contacto).
-
-2. ¿Conoces a alguien que quiera aumentar masa muscular (como yo quería) y no lo ha logrado solamente con gimnasio y comidas tipicas? [Dejame su contacto](/contacto), quizá pueda ayudarlo.
-
-3. ¿Conoces a alguien que quiera estar en su peso ideal de una vez por todas? De nuevo, [contáctame](/contacto), estoy seguro que puedo ayudar.
-
-4. ¿Quieres aprender a crear un negocio rentable **y ético** que te permita darle el estilo de vida que sueñas a tu familia? Créeme, es posible si tú y yo seguimos el plan correcto el tiempo suficiente. [Hagámoslo.](/contacto)
-
-##### Mis maestros en Herbalife:
-
-1. Mis patrocinadores: [Ana Gomez](https://www.instagram.com/anavidasana/) y [Ronaldo Mora](https://www.instagram.com/ronaldo_hbl/).
-2. [Mark Hughes](https://www.youtube.com/watch?v=IsiRzO6hSjM): fundador de la compañia.
-3. [Jim Rohn](https://www.youtube.com/watch?v=syheoEE_-ds&t=33s): la persona con la que aprendí ingles y una filosofia de vida preciosa.
-4. [Eduardo Salazar](https://www.youtube.com/watch?v=BOM3ogsT0M0): circulo de fundadores de Herbalife.
-5. [Guillermo Luna](https://www.youtube.com/watch?v=Rxqup83YLRg): Equipo de presidente en un año.
 
 ## ¿Cómo vas a empezar?
 
