AboutMe component updated

--- a/src/components/aboutMe.mdx
+++ b/src/components/aboutMe.mdx
@@ -35,17 +35,17 @@ Daniel, tu eres el hombre que unió los principios correctos provistos por la ci
 
 La vida te ha comprometido a ello.
 
-- Soy y he sido quien creó software con principios.
-- Soy y he sido quien creó una cultura empresarial y equipos plenos e inspiradores.
-- Soy y he sido quien creó proyectos útiles, diferentes, sinergicos.
-- Soy y he sido quien creó empresa social, la empresa del siglo XXII.
-- Soy y he sido quien creó transformación país desde el estoicismo y el kaizen.
-- Soy y he sido quien creó arte e ingenieria inspiradora, grandiosa, bien enfocado en los buenos principios y el bien común.
-- Soy y he sido quien armonizó lo humano y lo digital.
-- Soy y he sido quien sinergizó con personas increibles para crear cosas indescriptibles.
-- Soy y he sido quien creó arte con su propia vida.
-- Soy y he sido quien vendió los productos, servicios y causas en las cuales creía.
-- Soy y he sido el hombre que lideró a los demás para cambiar sus creencias, acciones, hábitos, emociones, consumo para mejor.
+- Seré quien creó software con principios.
+- Seré quien creó una cultura empresarial y equipos plenos e inspiradores.
+- Seré quien creó proyectos útiles, diferentes, sinergicos.
+- Seré quien creó empresa social, la empresa del siglo XXII.
+- Seré quien creó transformación país desde el estoicismo y el kaizen.
+- Seré quien creó arte e ingenieria inspiradora, grandiosa, bien enfocado en los buenos principios y el bien común.
+- Seré quien armonizó lo humano y lo digital.
+- Seré quien sinergizó con personas increibles para crear cosas indescriptibles.
+- Seré quien creó arte con su propia vida.
+- Seré quien vendió los productos, servicios y causas en las cuales creía.
+- Seré el hombre que lideró para expandir creencias, acciones, hábitos, emociones, consumo para mejor.
 
 ## Mis roles en orden de importancia son:
 
@@ -56,6 +56,19 @@ La vida te ha comprometido a ello.
 5. Yo como responsable financiero.
 6. Yo como hombre fitness.
 7. Responsable de mi ecosistema.
+
+## Filosofías que influyen mi vida.
+
+1. El estoicismo: te recomiendo que leas el manual de Epitecto.
+2. El liberalismo: en este momento estoy leyendo _Fundamentos de la sociedad libre. Por: Eamonn Butler_. pero Axel Kaiser y Gloria Alvarez han influido mucho en mi filosofía en este sentido.
+3. El desarrollo personal: que propone Jim Rohn, Mario Luna y Stephen Covey.
+
+## Personas que influyen en  mi vida.
+
+1. Ray Dalio.
+2. Mario Luna.
+3. Freddy Vega.
+4. Jim Rohn. 
 
 <!-- This default export overrides the default layout ensuring -->
 <!--  that the FAQ component isn't wrapped by other elements -->
